--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								<ul class="icons">
 									<li><a href="https://bit.ly/3K1LZNz" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://bit.ly/3lSZQKE" target="_blank" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="https://bit.ly/34GSiGa" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://bit.ly/3rsloAC" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
