--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								<li><a href="#projects">projects</a></li>
 								<li><a href="#resources"> resources</a></li>
 								<li><a href="#Contact">Contact</a></li>
-								<!--<li><a href="#elements">Elements</a></li>-->
+								
 							</ul>
 						</nav>
 					</header>
@@ -47,9 +47,10 @@
 						<!-- Whoami -->
 							<article id="whoami">
 								<h2 class="major">whoami</h2>
-								<p>Hi, I'm Enoch, I'm currently doing my bachelor's degree in computer application. I'm passionate about tech
-									more specifically in Cyber Security. Recently Web Development piqued my interest, and thus this website.
-									I am mainly focused on Web Security and Open Source Intelligence. And I do believe Cyber Security is one of the most underrated and largely misunderstood fields. <a href="#Contact">Wanna Connect?</a>.</p>
+								<p>Hi, I'm Enoch, I'm currently doing bachelor's degree in computer application. <br>I'm a geek
+									and I'm a Security Researcher. Recently fell in love with Web Development. My areas of interest include 
+									Programming, Open Source Intelligence, Computer Networking & Security, Web Penetration Testing.
+									I try and learn something new everyday. <br><a href="#Contact">Wanna Connect?</a>.</p>
 							</article>
 
 						<!-- Projects -->
@@ -107,7 +108,7 @@
 									<h6>Heading Level 6</h6>
 									<hr />
 									<h4>Blockquote</h4>
-									<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus lorem ipsum dolor sit amet nullam adipiscing eu felis.</blockquote>
+									<blockquote>.</blockquote>
 									<h4>Preformatted</h4>
 									<pre><code>i = 0;
 
