--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 						<!-- Whoami -->
 							<article id="whoami">
 								<h2 class="major">whoami</h2>
-								<p>Hi, I'm Enoch, I'm currently doing bachelor's degree in computer application. <br> I'm a geek
+								<p>Hi, I'm Enoch, I'm currently doing bachelor's degree in computer application. <br>I'm a geek
 									and I'm a Security Researcher. Recently fell in love with Web Development. My areas of interest include 
-									Programming, Open Source Intelligence, Computer Networking & Security, Web Penetration Testing.
-									<br> I try and learn something new everyday. <br><a href="#Contact">Wanna Connect?</a>.</p>
+									Programming, Open Source Intelligence, Computer Networking & Security, Web Penetration Testing. I try to learn something new everyday.
+									<br><a href="#Contact">Wanna Connect?</a>.</p>
 							</article>
 
 						<!-- Projects -->
