--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
 						<!-- Whoami -->
 							<article id="whoami">
 								<h2 class="major">whoami</h2>
-								<p>Hi, I'm Enoch, I'm currently doing bachelor's degree in computer application. <br>I'm a geek
-									and I'm a Security Researcher. Recently fell in love with Web Development. My areas of interest include 
-									Programming, Open Source Intelligence, Computer Networking & Security, Web Penetration Testing. I try to learn something new everyday.
+								<p>Hi, I'm Enoch, I'm currently doing bachelor's degree in computer application. I'm a geek
+									and a Security Researcher. Recently fell in love with Web Development. My areas of interest include 
+									Programming, Computer Networking & Security, Penetration Testing. I try to learn something new everyday.
 									<br><a href="#Contact">Wanna Connect?</a>.</p>
 							</article>
 
 						<!-- Projects -->
 							<article id="projects">
 								<h2 class="major">projects</h2>
-								<p>There isn't much going on here. Check back later :)</p>
+								<p>There isn't much going on here. Come back later :)</p>
 								
 							</article>
 
